--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       context: ./packages/api-cardano-db-hasura/hasura
     image: inputoutput/cardano-graphql-hasura:${CARDANO_GRAPHQL_VERSION:-2.2.0}
     restart: on-failure
+    network_mode: "host"
     environment:
       - POSTGRES_HOST=${POSTGRES_HOST}
       - POSTGRES_PORT=${POSTGRES_PORT:-5432}
