--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: inputoutput/cardano-db-sync:${CARDANO_DB_SYNC_VERSION:-5.0.1}
     command: [
       "--config", "/config/config.json",
-      "--socket-path", "/node-ipc/node"
+      "--socket-path", "/node-ipc/socket"
     ]
     network_mode: "host"
     environment:
