--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       - CACHE_ENABLED=true
       - GENESIS_FILE_BYRON=/config/genesis/byron.json
       - GENESIS_FILE_SHELLEY=/config/genesis/shelley.json
-      - HASURA_URI=http://hasura:8080
+      - HASURA_URI=http://127.0.0.1:8080
       - POSTGRES_HOST=${POSTGRES_HOST:-127.0.0.1}
       - POSTGRES_PORT=${POSTGRES_PORT:-5432}
       - POSTGRES_DB_FILE=/run/secrets/postgres_db
