--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,8 +72,11 @@ services:
       - HASURA_GRAPHQL_ADMIN_SECRET=${HASURA_GRAPHQL_ADMIN_SECRET}
       - POSTGRES_HOST=${POSTGRES_HOST:-127.0.0.1}
       - POSTGRES_PORT=${POSTGRES_PORT:-5432}
+      - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_DB_FILE=/run/secrets/postgres_db
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_PASSWORD_FILE=/run/secrets/postgres_password
+      - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_USER_FILE=/run/secrets/postgres_user
     expose:
       - 9105
